fix: add unit test cases and patch logic