@@ -3,8 +3,7 @@ package nus.iss.team3.backend.dataaccess;
 
 import static nus.iss.team3.backend.dataaccess.PostgresSqlStatement.*;
 
-import java.sql.ResultSet;
-import java.sql.SQLException;
+import java.sql.Timestamp;
 import java.time.ZoneId;
 import java.util.Collections;
 import java.util.HashMap;
@@ -19,9 +18,6 @@ import org.apache.logging.log4j.Logger;
 import org.mindrot.jbcrypt.BCrypt;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.RowMapper;
-import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
@@ -37,20 +33,13 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
 
   @Autowired IPostgresDataAccess postgresDataAccess;
 
-  @Autowired private JdbcTemplate jdbcTemplate;
-
   @Autowired private NamedParameterJdbcTemplate namedParameterJdbcTemplate;
 
   @Override
   public UserAccount authenticateUser(String name, String password) {
-    String sql =
-        "SELECT * FROM "
-            + PostgresSqlStatement.TABLE_USER_ACCOUNT
-            + " WHERE "
-            + PostgresSqlStatement.COLUMN_USER_ACCOUNT_NAME
-            + " = ?";
+
     try {
-      return verifyUserCredentials(sql, name, password);
+      return verifyUserCredentials(PostgresSqlStatement.SQL_AUTHENTICATE_USER, name, password);
     } catch (Exception e) {
       logger.error("Authentication failed", e);
       return null;
@@ -58,8 +47,17 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   }
 
   private UserAccount verifyUserCredentials(String sql, String name, String password) {
-    UserAccount user =
-        jdbcTemplate.queryForObject(sql, new Object[] {name}, new UserAccountRowMapper(true));
+
+    Map<String, Object> sqlInput = new HashMap<>();
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_NAME, name);
+
+    List<Map<String, Object>> temp = postgresDataAccess.queryStatement(sql, sqlInput);
+    if (temp == null || temp.size() != 1) {
+      logger.error("Error with account, please review account : {}", name);
+      return null;
+    }
+    UserAccount user = mapRowToUserAccount(temp.getFirst());
+
     if (user != null && BCrypt.checkpw(password, user.getPassword())) {
       user.setPassword(null);
       return user;
@@ -77,7 +75,8 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
     Map<String, Object> sqlInput = createUserAccountMap(userAccount);
 
     try {
-      int rowUpdated = postgresDataAccess.upsertStatement(SQL_USER_ACCOUNT_ADD, sqlInput);
+      int rowUpdated =
+          postgresDataAccess.upsertStatement(PostgresSqlStatement.SQL_USER_ACCOUNT_ADD, sqlInput);
       return rowUpdated == 1;
     } catch (DataAccessException e) {
       logger.error("Error adding user: {}", userAccount.getName(), e);
@@ -93,10 +92,12 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   public boolean deleteUserById(Integer id) {
 
     Map<String, Object> sqlInput = new HashMap<>();
-    sqlInput.put(INPUT_USER_ACCOUNT_ID, id);
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_ID, id);
 
     try {
-      int rowUpdated = postgresDataAccess.upsertStatement(SQL_USER_ACCOUNT_DELETE, sqlInput);
+      int rowUpdated =
+          postgresDataAccess.upsertStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_DELETE, sqlInput);
       return rowUpdated == 1;
     } catch (DataAccessException e) {
       logger.error("Error deleting user with ID: {}", id, e);
@@ -112,10 +113,12 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   public boolean updateUser(UserAccount userAccount) {
 
     Map<String, Object> sqlInput = createUserAccountMap(userAccount);
-    sqlInput.put(INPUT_USER_ACCOUNT_ID, userAccount.getId());
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_ID, userAccount.getId());
 
     try {
-      int rowUpdated = postgresDataAccess.upsertStatement(SQL_USER_ACCOUNT_UPDATE, sqlInput);
+      int rowUpdated =
+          postgresDataAccess.upsertStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_UPDATE, sqlInput);
       return rowUpdated == 1;
     } catch (DataAccessException e) {
       logger.error("Error updating user: {}", userAccount.getName(), e);
@@ -124,14 +127,15 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   }
 
   public boolean updateUserStatus(Integer userId, EUserStatus status) {
-    MapSqlParameterSource parameters = new MapSqlParameterSource();
-    parameters.addValue(INPUT_USER_ACCOUNT_ID, userId);
-    parameters.addValue(INPUT_USER_ACCOUNT_STATUS, status.getCode());
-
+    Map<String, Object> sqlInput = new HashMap<>();
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_ID, userId);
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_STATUS, status.getCode());
     try {
-      namedParameterJdbcTemplate.update(SQL_USER_ACCOUNT_UPDATE_STATUS, parameters);
+      int result =
+          postgresDataAccess.upsertStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_UPDATE_STATUS, sqlInput);
       logger.info("Successfully updated status to {} for user {}", status, userId);
-      return true;
+      return result == 1;
     } catch (Exception e) {
       logger.error("Error updating user status for user {}: {}", userId, e.getMessage(), e);
       return false;
@@ -142,10 +146,11 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   public UserAccount getUserById(Integer id) {
     try {
       Map<String, Object> sqlInput = new HashMap<>();
-      sqlInput.put(INPUT_USER_ACCOUNT_ID, id);
+      sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_ID, id);
       List<Map<String, Object>> result =
-          postgresDataAccess.queryStatement(SQL_USER_ACCOUNT_GET_BY_ID, sqlInput);
-      return result.isEmpty() ? null : translateDBRecordToUserAccount(result.get(0));
+          postgresDataAccess.queryStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_GET_BY_ID, sqlInput);
+      return (result == null || result.isEmpty()) ? null : mapRowToUserAccount(result.getFirst());
     } catch (DataAccessException e) {
       logger.error("Error getting user by ID: {}", id, e);
       return null;
@@ -156,10 +161,11 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   public UserAccount getUserByName(String name) {
     try {
       Map<String, Object> sqlInput = new HashMap<>();
-      sqlInput.put(INPUT_USER_ACCOUNT_NAME, name);
+      sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_NAME, name);
       List<Map<String, Object>> result =
-          postgresDataAccess.queryStatement(SQL_USER_ACCOUNT_GET_BY_NAME, sqlInput);
-      return result.isEmpty() ? null : translateDBRecordToUserAccount(result.get(0));
+          postgresDataAccess.queryStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_GET_BY_NAME, sqlInput);
+      return (result == null || result.isEmpty()) ? null : mapRowToUserAccount(result.getFirst());
     } catch (DataAccessException e) {
       logger.error("Error getting user by name: {}", name, e);
       return null;
@@ -170,10 +176,11 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
   public UserAccount getUserByEmail(String email) {
     try {
       Map<String, Object> sqlInput = new HashMap<>();
-      sqlInput.put(INPUT_USER_ACCOUNT_EMAIL, email);
+      sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_EMAIL, email);
       List<Map<String, Object>> result =
-          postgresDataAccess.queryStatement(SQL_USER_ACCOUNT_GET_BY_EMAIL, sqlInput);
-      return result.isEmpty() ? null : translateDBRecordToUserAccount(result.get(0));
+          postgresDataAccess.queryStatement(
+              PostgresSqlStatement.SQL_USER_ACCOUNT_GET_BY_EMAIL, sqlInput);
+      return (result == null || result.isEmpty()) ? null : mapRowToUserAccount(result.getFirst());
     } catch (DataAccessException e) {
       logger.error("Error getting user by email: {}", email, e);
       return null;
@@ -185,9 +192,17 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
    */
   @Override
   public List<UserAccount> getAllUsers() {
-    String sql = SQL_USER_ACCOUNT_GET_ALL;
+    String sql = PostgresSqlStatement.SQL_USER_ACCOUNT_GET_ALL;
     try {
-      List<UserAccount> users = jdbcTemplate.query(sql, new UserAccountRowMapper(false));
+
+      List<Map<String, Object>> results =
+          postgresDataAccess.queryStatement(sql, Collections.emptyMap());
+      if (results == null || results.isEmpty()) {
+        logger.warn("Query returned null. Returning empty list.");
+        return Collections.emptyList();
+      }
+      List<UserAccount> users = results.stream().map(this::mapRowToUserAccount).toList();
+
       logger.info("Found {} users", users.size());
       return users;
     } catch (DataAccessException e) {
@@ -196,69 +211,73 @@ public class UserAccountDataAccess implements IUserAccountDataAccess {
     }
   }
 
-  private UserAccount translateDBRecordToUserAccount(Map<String, Object> entity) {
-    UserAccount returnItem = new UserAccount();
-
-    returnItem.setId((Integer) entity.get(COLUMN_USER_ACCOUNT_ID));
-    returnItem.setName((String) entity.get(COLUMN_USER_ACCOUNT_NAME));
-    // Password is not set here as it's not returned from the database
-    // returnItem.setPassword((String) entity.get(COLUMN_USER_ACCOUNT_PASSWORD));
-    returnItem.setDisplayName((String) entity.get(COLUMN_USER_ACCOUNT_DISPLAY_NAME));
-    returnItem.setEmail((String) entity.get(COLUMN_USER_ACCOUNT_EMAIL));
-    returnItem.setStatus(EUserStatus.valueOfCode((Integer) entity.get(COLUMN_USER_ACCOUNT_STATUS)));
-    returnItem.setRole(EUserRole.valueOfCode((Integer) entity.get(COLUMN_USER_ACCOUNT_ROLE)));
-
-    if (entity.get(COLUMN_USER_ACCOUNT_CREATE_DATETIME) instanceof java.sql.Timestamp timestamp) {
-      returnItem.setCreateDateTime(timestamp.toInstant().atZone(ZoneId.systemDefault()));
-    }
-
-    if (entity.get(COLUMN_USER_ACCOUNT_UPDATE_DATETIME) instanceof java.sql.Timestamp timestamp) {
-      returnItem.setUpdateDateTime(timestamp.toInstant().atZone(ZoneId.systemDefault()));
-    }
-
-    return returnItem;
-  }
-
   private Map<String, Object> createUserAccountMap(UserAccount userAccount) {
     Map<String, Object> sqlInput = new HashMap<>();
-    sqlInput.put(INPUT_USER_ACCOUNT_NAME, userAccount.getName());
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_NAME, userAccount.getName());
     sqlInput.put(
-        INPUT_USER_ACCOUNT_PASSWORD, userAccount.getPassword()); // Consider hashing password
-    sqlInput.put(INPUT_USER_ACCOUNT_DISPLAY_NAME, userAccount.getDisplayName());
-    sqlInput.put(INPUT_USER_ACCOUNT_EMAIL, userAccount.getEmail());
-    sqlInput.put(INPUT_USER_ACCOUNT_STATUS, userAccount.getStatus().getCode());
-    sqlInput.put(INPUT_USER_ACCOUNT_ROLE, userAccount.getRole().getCode());
+        PostgresSqlStatement.INPUT_USER_ACCOUNT_PASSWORD,
+        userAccount.getPassword()); // Consider hashing password
+    sqlInput.put(
+        PostgresSqlStatement.INPUT_USER_ACCOUNT_DISPLAY_NAME, userAccount.getDisplayName());
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_EMAIL, userAccount.getEmail());
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_STATUS, userAccount.getStatus().getCode());
+    sqlInput.put(PostgresSqlStatement.INPUT_USER_ACCOUNT_ROLE, userAccount.getRole().getCode());
     return sqlInput;
   }
 
-  private class UserAccountRowMapper implements RowMapper<UserAccount> {
-    private final boolean includePassword;
-
-    public UserAccountRowMapper(boolean includePassword) {
-      this.includePassword = includePassword;
+  private UserAccount mapRowToUserAccount(Map<String, Object> row) {
+    if (row == null) {
+      return null;
     }
+    try {
+      UserAccount userAccount = new UserAccount();
 
-    @Override
-    public UserAccount mapRow(ResultSet rs, int rowNum) throws SQLException {
-      UserAccount user = new UserAccount();
-      user.setId(rs.getInt(COLUMN_USER_ACCOUNT_ID));
-      user.setName(rs.getString(COLUMN_USER_ACCOUNT_NAME));
-      if (includePassword) {
-        user.setPassword(rs.getString(COLUMN_USER_ACCOUNT_PASSWORD));
-      }
-      user.setDisplayName(rs.getString(COLUMN_USER_ACCOUNT_DISPLAY_NAME));
-      user.setEmail(rs.getString(COLUMN_USER_ACCOUNT_EMAIL));
-      user.setStatus(EUserStatus.valueOfCode(rs.getInt(COLUMN_USER_ACCOUNT_STATUS)));
-      user.setRole(EUserRole.valueOfCode(rs.getInt(COLUMN_USER_ACCOUNT_ROLE)));
-      user.setCreateDateTime(
-          rs.getTimestamp(COLUMN_USER_ACCOUNT_CREATE_DATETIME)
-              .toInstant()
-              .atZone(ZoneId.systemDefault()));
-      user.setUpdateDateTime(
-          rs.getTimestamp(COLUMN_USER_ACCOUNT_UPDATE_DATETIME)
-              .toInstant()
-              .atZone(ZoneId.systemDefault()));
-      return user;
+      userAccount.setId(
+          row.get(COLUMN_USER_ACCOUNT_ID) != null
+              ? ((Number) row.get(COLUMN_USER_ACCOUNT_ID)).intValue()
+              : null);
+      userAccount.setName(
+          row.get(COLUMN_USER_ACCOUNT_NAME) != null
+              ? ((String) row.get(COLUMN_USER_ACCOUNT_NAME))
+              : null);
+      userAccount.setPassword(
+          row.get(COLUMN_USER_ACCOUNT_PASSWORD) != null
+              ? ((String) row.get(COLUMN_USER_ACCOUNT_PASSWORD))
+              : null);
+      userAccount.setDisplayName(
+          row.get(COLUMN_USER_ACCOUNT_DISPLAY_NAME) != null
+              ? ((String) row.get(COLUMN_USER_ACCOUNT_DISPLAY_NAME))
+              : null);
+      userAccount.setEmail(
+          row.get(COLUMN_USER_ACCOUNT_EMAIL) != null
+              ? (String) row.get(COLUMN_USER_ACCOUNT_EMAIL)
+              : null);
+      userAccount.setStatus(
+          row.get(COLUMN_USER_ACCOUNT_STATUS) != null
+              ? EUserStatus.valueOfCode(((Number) row.get(COLUMN_USER_ACCOUNT_STATUS)).intValue())
+              : null);
+      userAccount.setRole(
+          row.get(COLUMN_USER_ACCOUNT_ROLE) != null
+              ? EUserRole.valueOfCode(((Number) row.get(COLUMN_USER_ACCOUNT_ROLE)).intValue())
+              : null);
+      userAccount.setCreateDateTime(
+          row.get(COLUMN_USER_ACCOUNT_CREATE_DATETIME) != null
+              ? ((Timestamp) row.get(COLUMN_USER_ACCOUNT_CREATE_DATETIME))
+                  .toInstant()
+                  .atZone(ZoneId.systemDefault())
+              : null);
+      userAccount.setUpdateDateTime(
+          row.get(COLUMN_USER_ACCOUNT_UPDATE_DATETIME) != null
+              ? ((Timestamp) row.get(COLUMN_USER_ACCOUNT_UPDATE_DATETIME))
+                  .toInstant()
+                  .atZone(ZoneId.systemDefault())
+              : null);
+
+      logger.debug("RecipeReview object mapping completed: ID={}", userAccount.getId());
+      return userAccount;
+    } catch (Exception e) {
+      logger.error("Error mapping row to UserAccount", e);
+      return null;
     }
   }
 }
